<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/viewholder_student_text_view_group"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="200dp"
        android:layout_margin="5dp"
        android:text="@string/viewholder_students_text_view_name"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/viewholder_students_text_view_name"
        android:layout_width="200dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="200dp"
        android:layout_margin="5dp"
        android:text="@string/viewholder_students_text_view_description"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_margin="5dp"
        android:id="@+id/viewholder_students_text_view_description"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="200dp"
        android:layout_margin="5dp"
        android:text="@string/viewholder_students_text_view_mark"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_margin="5dp"
        android:id="@+id/viewholder_students_text_view_mark"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

</LinearLayout>