<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:id="@+id/viewholder_notes_layout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:text="@string/viewholder_notes_text_view_date"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/viewholder_notes_text_view_date"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:text="@string/viewholder_notes_text_view_name"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/viewholder_notes_text_view_name"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:text="@string/viewholder_notes_text_view_text"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_margin="5dp"
        android:id="@+id/viewholder_notes_text_view_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

</LinearLayout>