<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cardview_light_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/fragment_students_create_image_view_avatar"
        android:layout_width="300dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/fragment_students_create_edit_text_fio"
        android:layout_width="200dp"
        android:hint="@string/viewholder_students_text_view_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_students_create_image_view_avatar"
        android:layout_height="45dp"/>

    <EditText
        android:id="@+id/fragment_students_create_edit_text_group"
        android:layout_width="200dp"
        android:hint="@string/viewholder_students_text_view_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_students_create_edit_text_fio"
        android:layout_height="45dp"/>

    <EditText
        android:id="@+id/fragment_students_create_edit_text_mark"
        android:layout_width="200dp"
        android:inputType="number"
        android:hint="@string/viewholder_students_text_view_mark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_students_create_edit_text_group"
        android:layout_height="45dp"/>

    <EditText
        android:id="@+id/fragment_students_create_edit_text_detail"
        android:layout_width="200dp"
        android:hint="@string/viewholder_students_text_view_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_students_create_edit_text_mark"
        android:layout_height="45dp"/>

    <TextView
        android:id="@+id/fragment_students_create_text_view_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_students_create_edit_text_detail"
        android:textColor="@color/red"/>

    <Button
        android:id="@+id/fragment_students_create_button_add"
        android:layout_width="200dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_students_create_text_view_error"
        android:text="add"/>


    <Button
        android:id="@+id/fragment_students_create_button_cancel"
        android:layout_width="200dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_students_create_button_add"
        android:text="cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>